src/client/chrome/css/app.css
$banana: #FFDB5C;
$electric-blue: #4897D8;
$light-blue: #dbedfc;
$watermelon: #FA6E59;
$canteloupe: #F8A055;
$base-white: #FAFAFA;

body {
   width:auto;
   height:auto;
   overflow: hidden;
   background-color: $base-white;
   color: $electric-blue;
   font-family: 'Raleway', sans-serif;
}

.url-bar {
  height: 40px;
  line-height: 40px;
  margin: 5px;
  border-radius: 3px;
  width: auto;
  background-color: $electric-blue;
  padding: 0px 6px;
  display: flex;
}

.url {
  color: $base-white;
}

.url:hover {
  color: $canteloupe;
}

.star-categories {
  float: right;
  height: 40px;
  width: 40px;
  right: 10px;
  position: absolute;
  line-height: 40px;
  color: $canteloupe;
}

.lookback-container{
  width: 95%;
  height: 80%;
  overflow: scroll;
  background-color: $base-white;
  margin: 30px;
  border:solid 1px $electric-blue;
}

.lookback-graph-container{
  height: calc(100% - 70px);
  min-width: 800px;
  padding-top: 10px;
}

.lookback-details-container{
  text-align: center;
  position: relative;
  padding: 10px;
  width: 100%;
  height: 125px;
  background-color: $base-white;
  color: $electric-blue;
  .h4{
    color: $canteloupe;
    margin: 5px;
  }
  .p{
    margin-right: 30px;
  }
}

/*BUTTONS*/
#back-button{
  border: 0;
  background: $electric-blue;
  border-radius: 4px;
  color: $base-white;
  font-size: 15;
  transition-duration: 0.4s;
  margin-right: 5px;
  margin-left: 5px;
  height: 27px;
}

#back-botton:hover {
    background: red;
    color: red;
}

.side-bar-title{
  text-align: center;
  padding: 10px;
  font-weight: bold;
  color: $canteloupe;
}

.side-bar-container{
  display: inline-block;
  width: 202px;
  height: calc(100% - 70px);
  background-color: $base-white;
  border-left: solid 3px $electric-blue;
  border-right: solid 3px $electric-blue;
  border-bottom: solid 3px $electric-blue;
}

.domain-bar{
  height: 22px;
  border: solid 1px $electric-blue;
  color: $canteloupe;
  display:inline-block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 1px;
  border-radius: 2px;
  padding: 0 2px;
  position:relative;
  z-index: 1;
  min-width: 24px;
  &:hover {
    border-color: $canteloupe;
  }
}

.domain-favicon {
  width: 15px;
  height: 15px;
  margin-bottom: 4px;
  margin-right: 8px;
}

.display-favicon {
  width:25px;
  height:25px;
  margin-right: 10px;
}

.flex-row{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.previousPath {
  border-color: $banana;
}

start-time-label .end-time-label{
  font-size: 15;
  color: $electric-blue;
  width: auto;
}

.site-title{
  font-size: 35px;
  margin-right: 15px;
  color: $base-white;
  font-weight: bold;
}

.search-results-container {
  width: calc(100% - 200px);
  height: calc(100% - 50px);
  display: inline-block;
  position: absolute;
}

.categories-page {
  height: auto;
}

.vertical-axis-label {
  transform: rotate(270deg);
  transform-origin: left top 0;
  font-size: 20;
  position: absolute;
  top: 600px;
}
.time-labels{
  padding-left: 30px;
  padding-right: 15px;
}

.start-time-label{
  float: left;
  display: inline-flex;
}
.end-time-label{
  float: right;
}

.time-break-line{
  height: calc(92% - 240px);
  position: absolute;
  z-index: 1;
  border-right: 1px solid $banana;
}

#first-time-break{
  width: 33%;
  float:left;
}

#second-time-break{
  width: 66%;
  float: right;
}

#time-break-line-label1{
  margin-left: 30%;
  position: absolute;
}
#time-break-line-label2{
  margin-left: 63%;
  position: absolute;
}

.time-container{
  display: list-item;
}

.nav-bar-button {
  border: none;
  background-color: $electric-blue;
  color: $banana;
  margin-top: 13px;
  font-size: medium;
}
.nav-bar-button:hover {
  color: $base-white;
}
.nav-bar-button-selected {
  color: $base-white;
  border-bottom: solid $base-white 1px;
  padding: 0px;
  margin: 10px;
}

.control-buttons{
  display: block;
  color: $canteloupe;
  font-weight: bold;
}

.checkbox {
  text-align: center;
}

.nav-bar-container {
  display: flex;
  justify-content: space-between;
  background-color: $electric-blue;
}

.nav-menu-bar {
  display: flex;
  width: 100%;
  justify-content: flex-start;
}

.search-bar {
  margin: 7px 10px;
  border-radius: 10px;
  border: none;
  min-width: 200px;
  height: 35px;
  padding: 10px;
}
.blacklist-text-entry {
  margin: 3px 5px;
  border-radius: 4px;
  border: none;
  width: 98%;
}
.all-categories {
  overflow: scroll;
}

.section-title {
  font-size: 20px;
  margin: 10px;
  color: $canteloupe;
}

.selected-domain-bar {
  margin-top: 5%;
  width: 95%;
  border: $electric-blue solid;
  border-left:none;
  float: none;
  margin-left: 2%;
  margin-right: 2%;
  height: 100px;
  border-radius: 5px;
  display:flex;
  flex-flow: row nowrap;
}

.page-bar{
  border-left: solid $electric-blue;
  height:100%;
  display:inline-block;
  margin: 0;
}

.close-detail-view-btn{
  float: right;
  margin-top: 10px;
  margin-right: 30px;
  border: #FAFAFA;
  background-color: #FAFAFA;
  padding-top: 0px;
  padding-bottom: 0px;
  vertical-align: middle;
  font-size: xx-large;
}

.category-entry-wrapper{
  width: 50%;
}

.domainBar-zoom-container{
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.hidden { display:none; }

.error_message { color: blue; }

.delete-category-button {
  float: right;
  color: $canteloupe;
  width: 15px;
  height: 25px;
  line-height: 25px;
}


.edit-category-button {
  color: $canteloupe;
  width: 15px;
  height: 25px;
  line-height: 25px;
}

.edit-category-input {
  height: 20px;
  width: 150px;
}

.category-title {
  color: $electric-blue;
  text-align: center;
  width: 150px;
}

.side-bar-category{
  width: 100%;
  height: 25px;
  display: flex;
  line-height: 25px;
  border-top-style: solid;
  border-top-width: thin;
  justify-content: space-between;
}

.side-bar-category.checked {
  background-color: $banana;
}


/*!
*DATE PICKER CSS
* https://github.com/arqex/react-datetime
*/
.date-picker {
  width:165px;
  position: relative;
}

.rdt {
  position: relative;
}
.rdtPicker {
  display: none;
  position: absolute;
  width: 250px;
  padding: 4px;
  margin-top: 1px;
  z-index: 99999 !important;
  background: #fff;
  box-shadow: 0 1px 3px rgba(0,0,0,.1);
  border: 1px solid #f9f9f9;
}
.rdtOpen .rdtPicker {
  display: block;
}
.rdtStatic .rdtPicker {
  box-shadow: none;
  position: static;
}

.rdtPicker .rdtTimeToggle {
  text-align: center;
}

.rdtPicker table {
  width: 100%;
  margin: 0;
}
.rdtPicker td,
.rdtPicker th {
  text-align: center;
  height: 28px;
}
.rdtPicker td {
  cursor: pointer;
}
.rdtPicker td.rdtDay:hover,
.rdtPicker td.rdtHour:hover,
.rdtPicker td.rdtMinute:hover,
.rdtPicker td.rdtSecond:hover,
.rdtPicker .rdtTimeToggle:hover {
  background: #eeeeee;
  cursor: pointer;
}
.rdtPicker td.rdtOld,
.rdtPicker td.rdtNew {
  color: #999999;
}
.rdtPicker td.rdtToday {
  position: relative;
}
.rdtPicker td.rdtToday:before {
  content: '';
  display: inline-block;
  border-left: 7px solid transparent;
  border-bottom: 7px solid #428bca;
  border-top-color: rgba(0, 0, 0, 0.2);
  position: absolute;
  bottom: 4px;
  right: 4px;
}
.rdtPicker td.rdtActive,
.rdtPicker td.rdtActive:hover {
  background-color: #428bca;
  color: #fff;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
}
.rdtPicker td.rdtActive.rdtToday:before {
  border-bottom-color: #fff;
}
.rdtPicker td.rdtDisabled,
.rdtPicker td.rdtDisabled:hover {
  background: none;
  color: #999999;
  cursor: not-allowed;
}

.rdtPicker td span.rdtOld {
  color: #999999;
}
.rdtPicker td span.rdtDisabled,
.rdtPicker td span.rdtDisabled:hover {
  background: none;
  color: #999999;
  cursor: not-allowed;
}
.rdtPicker th {
  border-bottom: 1px solid #f9f9f9;
}
.rdtPicker .dow {
  width: 14.2857%;
  border-bottom: none;
}
.rdtPicker th.rdtSwitch {
  width: 100px;
}
.rdtPicker th.rdtNext,
.rdtPicker th.rdtPrev {
  font-size: 21px;
  vertical-align: top;
}

.rdtPrev span,
.rdtNext span {
  display: block;
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none;   /* Chrome/Safari/Opera */
  -khtml-user-select: none;    /* Konqueror */
  -moz-user-select: none;      /* Firefox */
  -ms-user-select: none;       /* Internet Explorer/Edge */
  user-select: none;
}

.rdtPicker th.rdtDisabled,
.rdtPicker th.rdtDisabled:hover {
  background: none;
  color: #999999;
  cursor: not-allowed;
}
.rdtPicker thead tr:first-child th {
  cursor: pointer;
}
.rdtPicker thead tr:first-child th:hover {
  background: #eeeeee;
}

.rdtPicker tfoot {
  border-top: 1px solid #f9f9f9;
}

.rdtPicker button {
  border: none;
  background: none;
  cursor: pointer;
}
.rdtPicker button:hover {
  background-color: #eee;
}

.rdtPicker thead button {
  width: 100%;
  height: 100%;
}

td.rdtMonth,
td.rdtYear {
  height: 50px;
  width: 25%;
  cursor: pointer;
}
td.rdtMonth:hover,
td.rdtYear:hover {
  background: #eee;
}

.rdtCounters {
  display: inline-block;
}

.rdtCounters > div {
  float: left;
}

.rdtCounter {
  height: 100px;
}

.rdtCounter {
  width: 40px;
}

.rdtCounterSeparator {
  line-height: 100px;
}

.rdtCounter .rdtBtn {
  height: 40%;
  line-height: 40px;
  cursor: pointer;
  display: block;

  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none;   /* Chrome/Safari/Opera */
  -khtml-user-select: none;    /* Konqueror */
  -moz-user-select: none;      /* Firefox */
  -ms-user-select: none;       /* Internet Explorer/Edge */
  user-select: none;
}
.rdtCounter .rdtBtn:hover {
  background: #eee;
}
.rdtCounter .rdtCount {
  height: 20%;
  font-size: 1.2em;
}

.rdtMilli {
  vertical-align: middle;
  padding-left: 8px;
  width: 48px;
}

.rdtMilli input {
  width: 100%;
  font-size: 1.2em;
  margin-top: 37px;
}

.edit-category-entry {
  textarea {
    width: 150px;
    border: none;
    background-color: $light-blue;
    text-align: center;
  }
}

#loading_page {
  display: table;
  margin: 0 auto;
  margin-top: 18%;
}

.star-display{
  margin-top: 10px;
}

.display-view {
  width:50%
}

.page-details{
  height: 300px;
}

